Long constructor deprecation