@@ -142,7 +142,7 @@ public final class AccessType
     @Override
     public int hashCode()
     {
-        return new Long(getId()).hashCode();
+        return Long.valueOf(getId()).hashCode();
     }
 
     /**
